# pdf-reading-tracker

./: .gitignore  README.md  papers_app.py  process_papers.py  requirements.txt  run_drag.sh
app/: ai_client.py  config.py  main.py  pdf_reader.py  research_ai.py  research_db.py  settings_store.py  storage.py  workspace_app.py
docs/: google-sheet-setup.md  how-to-use.txt  project-overview.txt  quick-commands.txt  sheets-schema.md
output/: reads.csv
scripts/: build-macos-desktop.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/viewer-dist/: index.html
static/workspace/: style.css
templates/workspace/: base.html  category.html  dashboard.html  intake.html  question_detail.html  resource_detail.html  resource_new.html  settings.html  subtopic.html  writing_edit.html
