[package]
name = "research-workspace-desktop"
version = "0.1.0"
description = "Desktop shell for the Research Workspace (FastAPI)"
authors = ["Zay"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
